[gd_scene load_steps=6 format=3 uid="uid://b16p1bo02550o"]

[ext_resource type="LabelSettings" uid="uid://bj5mtd81sdkad" path="res://font/credits_title.tres" id="1_g4wvt"]
[ext_resource type="Script" uid="uid://b6gfbvqbsakem" path="res://script/credits.gd" id="1_pjc1l"]
[ext_resource type="LabelSettings" uid="uid://cwfpw57os12kv" path="res://font/credits_text.tres" id="2_pjc1l"]
[ext_resource type="Theme" uid="uid://wg2u8m0gujit" path="res://theme/main_menu_theme.tres" id="3_j6beo"]
[ext_resource type="Texture2D" uid="uid://dexntd6kwbe8" path="res://img/piniata/dead_piniata.png" id="5_j6beo"]

[node name="CanvasLayerCredits" type="CanvasLayer"]
script = ExtResource("1_pjc1l")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 14
alignment = 1

[node name="CREDITS" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Game by: Gummy Grenade Games  
Music: Tallbeard  
Sprite Assets: Otterisk  
Slash Animation: kiddolink  
Testing: Bobby Prew  "
label_settings = ExtResource("2_pjc1l")
horizontal_alignment = 1

[node name="STATS" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "‚è±Ô∏è Total Time: 1.00.00
üí∞ Money Made: $00000  
üå± Seeds Planted: 1,000  
üó°Ô∏è  Pi√±ata Clicks: 1,000  
ü•á Favorite Crop: Onion "
label_settings = ExtResource("2_pjc1l")
horizontal_alignment = 1

[node name="THANKYOU" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "THANK YOU FOR PLAYING!"
label_settings = ExtResource("1_g4wvt")
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 25
alignment = 1

[node name="Continue Playing" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(77, 24)
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("3_j6beo")
theme_override_constants/outline_size = 6
theme_override_font_sizes/font_size = 23
text = "CONTINUE"

[node name="NewGamePlusButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(77, 24)
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("3_j6beo")
theme_override_constants/outline_size = 6
theme_override_font_sizes/font_size = 23
text = "NEW GAME+"

[node name="NEWGAMEPLUSOVER" type="Label" parent="MarginContainer/VBoxContainer"]
visible = false
layout_mode = 2
text = "Party over"
label_settings = ExtResource("1_g4wvt")
horizontal_alignment = 1

[node name="Graveyard" type="Control" parent="MarginContainer"]
visible = false
layout_mode = 2
mouse_filter = 2

[node name="TextureRect" type="TextureRect" parent="MarginContainer/Graveyard"]
layout_mode = 0
offset_left = 383.0
offset_top = 302.0
offset_right = 580.0
offset_bottom = 430.0
texture = ExtResource("5_j6beo")

[node name="TextureRect6" type="TextureRect" parent="MarginContainer/Graveyard"]
layout_mode = 0
offset_left = 438.0
offset_top = 299.0
offset_right = 635.0
offset_bottom = 427.0
texture = ExtResource("5_j6beo")

[node name="TextureRect7" type="TextureRect" parent="MarginContainer/Graveyard"]
layout_mode = 0
offset_left = 502.0
offset_top = 296.0
offset_right = 699.0
offset_bottom = 424.0
texture = ExtResource("5_j6beo")

[node name="TextureRect8" type="TextureRect" parent="MarginContainer/Graveyard"]
layout_mode = 0
offset_left = 565.0
offset_top = 292.0
offset_right = 762.0
offset_bottom = 420.0
texture = ExtResource("5_j6beo")

[node name="TextureRect2" type="TextureRect" parent="MarginContainer/Graveyard"]
layout_mode = 0
offset_left = 59.0
offset_top = 301.0
offset_right = 256.0
offset_bottom = 429.0
texture = ExtResource("5_j6beo")
flip_h = true

[node name="TextureRect3" type="TextureRect" parent="MarginContainer/Graveyard"]
layout_mode = 0
offset_left = -3.0
offset_top = 294.0
offset_right = 194.0
offset_bottom = 422.0
texture = ExtResource("5_j6beo")
flip_h = true

[node name="TextureRect4" type="TextureRect" parent="MarginContainer/Graveyard"]
layout_mode = 0
offset_left = -61.0
offset_top = 288.0
offset_right = 136.0
offset_bottom = 416.0
texture = ExtResource("5_j6beo")
flip_h = true

[node name="TextureRect5" type="TextureRect" parent="MarginContainer/Graveyard"]
layout_mode = 0
offset_left = -125.0
offset_top = 282.0
offset_right = 72.0
offset_bottom = 410.0
texture = ExtResource("5_j6beo")
flip_h = true

[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/Continue Playing" to="." method="_on_continue_playing_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/NewGamePlusButton" to="." method="_on_new_game_plus_button_pressed"]
